--- a/index.html
+++ b/index.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My KernelSU Experience Article</title>
+  <meta charset="UTF-8">
+  <title>KernelSU Experience</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      max-width: 800px;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
       margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
+      max-width: 800px;
+      padding: 20px;
       color: #333;
-      background-color: #f9f9f9;
     }
     h1 {
-      color: #005f73;
-      border-bottom: 2px solid #0a9396;
-      padding-bottom: 10px;
+      color: #007BFF;
     }
-    a {
-      color: #0a9396;
-      text-decoration: none;
+    h2 {
+      margin-top: 30px;
     }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      margin-top: 40px;
+    .footer {
+      margin-top: 50px;
       font-size: 0.9em;
-      color: #666;
-      text-align: center;
+      color: #888;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to my KernelSU experience article</h1>
-  <p>This is my first article hosted on GitHub Pages.</p>
-  <p>
-    Check out my project repository here:
-    <a href="https://github.com/mina2357/scanner.root.github.io" target="_blank" rel="noopener noreferrer">
-      scanner.root.github.io on GitHub
-    </a>
-  </p>
+  <p>This is my first article hosted on <strong>GitHub Pages</strong>, and it documents my personal experience using <code>KernelSU Next</code> as a root solution on Android.</p>
 
-  <footer>
-    &copy; 2025 Mina2357
-  </footer>
+  <h2>🔧 What is KernelSU Next?</h2>
+  <p>It’s a native root solution for Android devices that integrates at the kernel level and allows for enhanced control and performance compared to other root methods like Magisk.</p>
+
+  <h2>📱 My Experience</h2>
+  <p>After installing it on my Android phone, I noticed better app compatibility, lower power usage, and faster system responses. I’ll be sharing more technical steps in future posts.</p>
+
+  <h2>📚 Why I Chose GitHub Pages</h2>
+  <p>GitHub Pages is free, reliable, and easy to use for sharing static content like this article. No server setup required.</p>
+
+  <div class="footer">
+    — Written by <a href="https://github.com/mina2357">mina2357</a> • Hosted on GitHub Pages
+  </div>
 </body>
 </html>
