--- a/index.html
+++ b/index.html
@@ -2,44 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>KernelSU Experience</title>
+  <title>KernelSU Next – The True Future of Android Rooting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      margin: 40px auto;
-      max-width: 800px;
+      background: #f4f4f4;
+      margin: 0;
       padding: 20px;
       color: #333;
     }
-    h1 {
-      color: #007BFF;
+    .container {
+      max-width: 800px;
+      background: #fff;
+      margin: auto;
+      padding: 30px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 8px;
     }
-    h2 {
-      margin-top: 30px;
+    h1, h2 {
+      color: #0066cc;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ddd;
+      margin: 30px 0;
+    }
+    a {
+      color: #007acc;
+      text-decoration: none;
     }
     .footer {
-      margin-top: 50px;
+      margin-top: 40px;
       font-size: 0.9em;
       color: #888;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to my KernelSU experience article</h1>
-  <p>This is my first article hosted on <strong>GitHub Pages</strong>, and it documents my personal experience using <code>KernelSU Next</code> as a root solution on Android.</p>
+  <div class="container">
+    <h1>🔰 KernelSU Next – The True Future of Android Rooting</h1>
 
-  <h2>🔧 What is KernelSU Next?</h2>
-  <p>It’s a native root solution for Android devices that integrates at the kernel level and allows for enhanced control and performance compared to other root methods like Magisk.</p>
+    <p>In the Android rooting world, Magisk has long been the standard. But with increasing security hardening in recent Android versions, traditional methods are hitting limitations. Enter <strong>KernelSU Next</strong> — a cutting-edge, open-source project developed by researchers at the University of Kansas.</p>
 
-  <h2>📱 My Experience</h2>
-  <p>After installing it on my Android phone, I noticed better app compatibility, lower power usage, and faster system responses. I’ll be sharing more technical steps in future posts.</p>
+    <hr>
 
-  <h2>📚 Why I Chose GitHub Pages</h2>
-  <p>GitHub Pages is free, reliable, and easy to use for sharing static content like this article. No server setup required.</p>
+    <h2>🔧 What is KernelSU Next?</h2>
+    <p><strong>KernelSU Next</strong> integrates root access directly at the kernel level, providing unmatched stability, performance, and stealth. Unlike Magisk, which operates through system overlays and modules, KernelSU Next becomes part of the kernel itself.</p>
 
-  <div class="footer">
-    — Written by <a href="https://github.com/mina2357">mina2357</a> • Hosted on GitHub Pages
+    <hr>
+
+    <h2>💡 Why KernelSU Next?</h2>
+    <ul>
+      <li>Native kernel-level root</li>
+      <li>High performance & lower detection</li>
+      <li>Ideal for security testing & research</li>
+      <li>Open source & developer-friendly</li>
+      <li>Stable with SELinux enforced</li>
+    </ul>
+
+    <hr>
+
+    <h2>🔍 KernelSU Next vs Magisk (Quick Comparison)</h2>
+    <table border="1" cellpadding="8" cellspacing="0" style="width:100%; border-collapse: collapse;">
+      <tr>
+        <th>Feature</th>
+        <th>Magisk</th>
+        <th>KernelSU Next</th>
+      </tr>
+      <tr>
+        <td>Performance</td>
+        <td>Good</td>
+        <td>Better / Native</td>
+      </tr>
+      <tr>
+        <td>Detection Resistance</td>
+        <td>Moderate</td>
+        <td>Very Low</td>
+      </tr>
+      <tr>
+        <td>Kernel Integration</td>
+        <td>External</td>
+        <td>Native</td>
+      </tr>
+      <tr>
+        <td>Security Testing</td>
+        <td>Limited</td>
+        <td>Excellent</td>
+      </tr>
+      <tr>
+        <td>SELinux Compatibility</td>
+        <td>Limited</td>
+        <td>Full Support</td>
+      </tr>
+    </table>
+
+    <hr>
+
+    <h2>🧪 My Personal Experience</h2>
+    <p>As someone who actively tests tools like NetHunter, Frida, tcpdump, and Wireshark, KernelSU Next has been a game-changer. Root is persistent, stable, and system-level, allowing complete control without interference.</p>
+
+    <hr>
+
+    <h2>📣 A Call to Action</h2>
+    <p><strong>KernelSU Next</strong> is still growing — but it’s already better in many ways than current solutions. If you care about true, advanced rooting, give it a try. Share your experience. Star the GitHub repo. Let’s build the future of Android rooting together.</p>
+
+    <hr>
+
+    <h2>🔗 Useful Links</h2>
+    <p>GitHub: <a href="https://github.com/KernelSU-Next/KernelSU-Next" target="_blank">https://github.com/KernelSU-Next/KernelSU-Next</a></p>
+
+    <div class="footer">© 2025 Mina2357 · *ＳＣＡＮＯＲツ*</div>
   </div>
 </body>
 </html>
