--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>KernelSU Next – The True Future of Android Rooting</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KernelSU Next Experience</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: url('https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/main/logo.png') no-repeat center center fixed;
+      background-size: contain;
+      background-color: #121212;
+      color: white;
       margin: 0;
       padding: 20px;
-      color: #333;
-    }
-    .container {
-      max-width: 800px;
-      background: #fff;
-      margin: auto;
-      padding: 30px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    h1, h2 {
-      color: #0066cc;
-    }
-    hr {
-      border: none;
-      border-top: 1px solid #ddd;
-      margin: 30px 0;
+      line-height: 1.6;
     }
     a {
-      color: #007acc;
+      color: #4caf50;
       text-decoration: none;
     }
-    .footer {
+    a:hover {
+      text-decoration: underline;
+    }
+    hr {
+      border: 0;
+      height: 1px;
+      background: #444;
+      margin: 20px 0;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 15px 0;
+    }
+    table, th, td {
+      border: 1px solid #4caf50;
+    }
+    th, td {
+      padding: 8px;
+      text-align: left;
+    }
+    em {
+      display: block;
       margin-top: 40px;
-      font-size: 0.9em;
-      color: #888;
+      font-style: normal;
       text-align: center;
+      font-size: 1.1em;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <section>
     <h1>🔰 KernelSU Next – The True Future of Android Rooting</h1>
-
-    <p>In the Android rooting world, Magisk has long been the standard. But with increasing security hardening in recent Android versions, traditional methods are hitting limitations. Enter <strong>KernelSU Next</strong> — a cutting-edge, open-source project developed by researchers at the University of Kansas.</p>
+    <p>In the Android rooting world, Magisk has long been the standard. But with increasing security hardening in recent Android versions, traditional methods are hitting limitations. Enter KernelSU Next — a cutting-edge, open-source project developed by researchers at the University of Kansas.</p>
 
     <hr>
 
     <h2>🔧 What is KernelSU Next?</h2>
-    <p><strong>KernelSU Next</strong> integrates root access directly at the kernel level, providing unmatched stability, performance, and stealth. Unlike Magisk, which operates through system overlays and modules, KernelSU Next becomes part of the kernel itself.</p>
+    <p>KernelSU Next integrates root access directly at the kernel level, providing unmatched stability, performance, and stealth. Unlike Magisk, which operates through system overlays and modules, KernelSU Next becomes part of the kernel itself.</p>
 
     <hr>
 
@@ -65,7 +74,7 @@
     <hr>
 
     <h2>🔍 KernelSU Next vs Magisk (Quick Comparison)</h2>
-    <table border="1" cellpadding="8" cellspacing="0" style="width:100%; border-collapse: collapse;">
+    <table>
       <tr>
         <th>Feature</th>
         <th>Magisk</th>
@@ -106,14 +115,14 @@
     <hr>
 
     <h2>📣 A Call to Action</h2>
-    <p><strong>KernelSU Next</strong> is still growing — but it’s already better in many ways than current solutions. If you care about true, advanced rooting, give it a try. Share your experience. Star the GitHub repo. Let’s build the future of Android rooting together.</p>
+    <p>KernelSU Next is still growing — but it’s already better in many ways than current solutions. If you care about true, advanced rooting, give it a try. Share your experience. Star the GitHub repo. Let’s build the future of Android rooting together.</p>
 
     <hr>
 
     <h2>🔗 Useful Links</h2>
     <p>GitHub: <a href="https://github.com/KernelSU-Next/KernelSU-Next" target="_blank">https://github.com/KernelSU-Next/KernelSU-Next</a></p>
 
-    <div class="footer">© 2025 Mina2357 · *ＳＣＡＮＯＲツ*</div>
-  </div>
+    <p><em>ＳＣＡＮＯＲツ</em></p>
+  </section>
 </body>
 </html>
